2009-10-06  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #10329: Speaking URL path segment disappered from page overlay

2009-10-02  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Changed index bk_realurl02 (shorter key)
	* Commented TCEmain hook: it needs a better way of handling page renames
	* Fixed bug #9976: realurl stops working when encodeSpURL_postProc hook is used
	* Fixed bug #11873: Error in dokumentation decodeSpURL_postProc does not exist
	* Fixed bug #11347: Strip Tags in Titles
	* Fixed bug #11777: Add new field "spurl_string" to tx_realurl_chashcache that makes it easier to debug the contents of this table
	* Fixed bug #9267: "bad" line in realurl manual

2009-10-01  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Removed ereg_* functions (deprecated in PHP 5.3)
	* Small fixes in the redirect module
	* Replace cHash with the one provided in the query string (Snowflake fix)

2009-04-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Reworked redirects module
	* Fixed problem: if default language uid is not 0 and language is not set in the URL, RealURL still used 0

2009-04-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed layout and fields in the 'Redirects' function
	* Removed 'Clear cache' on extension update
	* Changed cHash table to use a full md5 string as URL hash. This makes less possible to create wrong cHashes.
	* Use full URL in redirects to prevent wrong redirects
	* Removed a method to find root page id by is_siteroot check
	* Fixed double call to findRootPageId() when using _DOMAINS

2009-01-28  Dmitry Dulepov  <dmitry@typo3.org>

	* Added pages_language_overlay to modified_tables to make EM happy
	* Removed hash from tx_realurl_pathcache and optimized the whole handling of this cache with additional indexes
	* Added strict mode with more checks for the configuration

2009-01-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Added a call to pageNotFound and exit if incoming URL cannot be parsed
