@@ -1,3 +1,8 @@
+2009-10-08  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Fixed bug #1011393: 2 folder with "exclude from speaking URL" - 404Error
+	* Fixed bug #9545: "exclude from speaking url segment" doesn't work if there are two or more pages with the flag in the same directory
+
 2009-10-06  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #10329: Speaking URL path segment disappered from page overlay
